# Veille

./: .coverage  .env  Dockerfile.test  commandes.txt  docker-compose.yml  init.sql  init_db.bat  pyproject.toml  pytest.ini  setup.py  sources.txt
veille_db/: __init__.py  pyproject.toml
veille_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
veille_db/.github/workflows/: ci.yml
veille_db/app/: __init__.py  app.py  main.py  utils.py
veille_db/tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_main.py  test_utils.py
